<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:labelFor="@id/create_field_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dip"
        android:gravity="end"
        android:text="@string/date"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/create_field_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/create_check_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/error"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:visibility="invisible" />
</LinearLayout>
